log/statview/25112024_181703_Statview_pmt_22012_1_1.out
nohup: ignoring input
  File "/lustre/hpc/icecube/cyan/factory/DOMification/StatViewerPMT.py", line 56
    bin_width_raw = 
                    ^
SyntaxError: invalid syntax
